Motion Paths: 'Update Paths' inconveniently restores frame range #101522

Closed
opened 2022-10-01 13:31:10 +02:00 by No Name · 15 comments

System Information
Operating system: Linux-5.19.10-1-default-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.2.0, caused by 4e57b6ce77
Worked: (3.1)

Short description of error
If there is already a motion path, editing its frame range and then clicking "Update" overwrites those edits.

Exact steps for others to reproduce the error

  • Open attached .blend file
  • In the Properties editor, go to {nav Object Properties > Motion Paths} and change the Frame End value to 30
  • Click Update Paths
  • See that the end frame jumps back to 250.

motion_path.blend

**System Information** Operating system: Linux-5.19.10-1-default-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.2.0, caused by 4e57b6ce77 Worked: (3.1) **Short description of error** If there is already a motion path, editing its frame range and then clicking "Update" overwrites those edits. **Exact steps for others to reproduce the error** - Open attached .blend file - In the `Properties` editor, go to {nav Object Properties > Motion Paths} and change the Frame End value to 30 - Click `Update Paths` - See that the end frame jumps back to 250. [motion_path.blend](https://archive.blender.org/developer/F13623498/motion_path.blend)
Author

Added subscriber: @legendboyAni

Added subscriber: @legendboyAni

Added subscriber: @user1

Added subscriber: @user1

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

can you please share an example blend file, and maybe some screenshots or -records (before/after)?

can you please share an example blend file, and maybe some screenshots or -records (before/after)?
Author

{F13602591}ok hear is the video that shows what is wrong with new motion path

{[F13602591](https://archive.blender.org/developer/F13602591/2022-10-01_06-30-25.mp4)}ok hear is the video that shows what is wrong with new motion path
Author

In #101522#1426096, @user1 wrote:
can you please share an example blend file, and maybe some screenshots or -records (before/after)?

hey any update on it i added the video as well

> In #101522#1426096, @user1 wrote: > can you please share an example blend file, and maybe some screenshots or -records (before/after)? hey any update on it i added the video as well
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Pratik Borhade changed title from NEW motion path sucks to Problem in NEW motion path 2022-10-06 08:29:30 +02:00

Added subscribers: @Kdaf, @dr.sybren, @mano-wii

Added subscribers: @Kdaf, @dr.sybren, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Caused by 4e57b6ce77
Cc. @Kdaf, @dr.sybren

Caused by 4e57b6ce77 Cc. @Kdaf, @dr.sybren
Germano Cavalcante changed title from Problem in NEW motion path to Motion Paths: 'Update Paths' inconveniently restores frame range 2022-10-06 17:03:20 +02:00
Member

Added subscriber: @BClark

Added subscriber: @BClark
Member

For now the best option would be to select the keys you want the range to update for so it updates around that range. I do agree that the option to use the set range instead of always use scene frame range to update isn't ideal. The other options should be there + use the range settings from the Motion Path Panel.

For now the best option would be to select the keys you want the range to update for so it updates around that range. I do agree that the option to use the set range instead of always use scene frame range to update isn't ideal. The other options should be there + use the range settings from the Motion Path Panel.

I agree this is an issue, but I did remove the drama from the description.

I agree this is an issue, but I did remove the drama from the description.

This issue was referenced by d72c7eefd1

This issue was referenced by d72c7eefd1c5784191d100ada3587acc5011ec72

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sybren A. Stüvel self-assigned this 2022-12-12 17:37:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101522
No description provided.